Introduce extensions::CreateUrlCollectionFromForm

During the development of r466661 |GetHumanReadableOrigin| was replaced
by |CreateURLFromForm| in passwords_private_delegate_impl.cc to be to
handle Android credentials in an appropriate manner. However, there was
an undetected reliance on using |GetHumanReadableOrigin| in order to
display user passwords. Since the result of |CreateURLFromForm| is
slightly different, the frontend was unable to match origins when
displaying passwords.

This change addresses this issue by replacing other calls to
|GetHumanReadableOrigin| with |CreateUrlCollectionFromForm| restoring
consistency between results.

TBR=rdevlin.cronin@chromium.org
BUG=717454

Review-Url: https://codereview.chromium.org/2844963003
Cr-Commit-Position: refs/heads/master@{#472702}

Former-commit-id: 2d3f81e4a7d9839d5183dbabf17655fbbf0e5cb7